@@ -1,0 +1,6 @@
+{
+  "parent": "minecraft:block/cube_all",
+  "textures": {
+    "all": "relativedimensions:block/aberrant_dirt"
+  }
+}
