@@ -1,0 +1,3 @@
+{
+  "parent": "relativedimensions:block/aberrant_snowy_grass"
+}
