@@ -1,18 +1,0 @@
-{
-  "type": "minecraft:ore",
-  "config": {
-    "discard_chance_on_air_exposure": 0.0,
-    "size": 8,
-    "targets": [
-      {
-        "state": {
-          "Name": "relativedimensions:aberrant_ore"
-        },
-        "target": {
-          "block": "minecraft:netherrack",
-          "predicate_type": "minecraft:block_match"
-        }
-      }
-    ]
-  }
-}
