@@ -3,7 +3,7 @@ package es.nullbyte.relativedimensions;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.logging.LogUtils;
 import es.nullbyte.relativedimensions.blocks.BlockInit;
-import es.nullbyte.relativedimensions.datagen.loot.LootModifiers.ModLootModifiers;
+import es.nullbyte.relativedimensions.datagen.loot.globalLootModifiers.LootModifiers.ModLootModifiers;
 import es.nullbyte.relativedimensions.effects.ModEffects;
 import es.nullbyte.relativedimensions.items.ItemInit;
 import es.nullbyte.relativedimensions.items.CreativeModTabs;
