@@ -81,6 +81,16 @@
   "item.relativedimensions.aberrant_stick" : "Palo aberrante",
   "item.relativedimensions.aberrant_stick_tooltip" : "Un palo hecho de madera con propiedades extrañas. Es el único tipo de madera que puede contener la energía de minerales aberrantes sin deteriorarse",
 
+  "item.relativedimensions.aberrant_shovel" : "Pala aberrante",
+  "item.relativedimensions.aberrant_shovel.tooltip" : "Una pala con la capcidad de alterar la realidad.\n",
+  "block.relativedimensions.aberrant_grass" : "Césped aberrante",
+  "item.relativedimensions.aberrant_grass.tooltip" : "Tierra con césped que fue alterada por derramamientos dimensionales\n",
+  "block.relativedimensions.aberrant_dirt" : "Tierra aberrante",
+  "item.relativedimensions.aberrant_dirt.tooltip" : "Tierra que fue alterada por derramamientos dimensionales\n",
+  "block.relativedimensions.aberrant_snowy_grass" : "Césped nevado aberrante",
+  "item.relativedimensions.aberrant_snowy_grass.tooltip" : "Tierra con nieve encima. En lugar de derretirse, la nieve parece ser absorbida por la tierra debido a la radiación dentro del bloque.",
+
+
   "advancements.relativedimensions.aberrant_root.title" : "Cazador de fallas dimensionales",
   "advancements.relativedimensions.aberrant_root.toast" : "Has encontrado algo que no debería estar aquí",
   "advancements.relativedimensions.aberrant_tool.title" : "Abriendo grietas en la realidad",
